stacks/securityGroups_jinja.yaml
###############################################################################
# !!! DO NOT EDIT BY HAND. Created by the `render-securityGroups.py` file !!! #
###############################################################################

AWSTemplateFormatVersion: "2010-09-09"
Description: "VPC for Minecraft Bedrock Server"

Resources:

  SecurityGroupSSH:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Enable SSH access via port 22, from deployment host"
      VpcId: !ImportValue vpc-VPCID
      SecurityGroupIngress:
      {%- for ip in config.whitelisted_ips %} 
        - IpProtocol: "tcp"
          FromPort: "22"
          ToPort: "22"
          CidrIp: "{{ ip }}/32"
      {%- endfor %}

  SecurityGroupMinecraftServer:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Enable access to Minecraft Bedrock server for approved IPs"
      VpcId: !ImportValue vpc-VPCID
      SecurityGroupIngress:
      {%- for ip in config.whitelisted_ips %} 
        - IpProtocol: "tcp"
          FromPort: "19132"
          ToPort: "19132"
          CidrIp: "{{ ip }}/32"
      {%- endfor %}


Outputs:
  SecurityGroupSSH:
    Description: "SG ID allowing SSH access"
    Value: !Ref SecurityGroupSSH
    Export:
      Name: !Sub "${AWS::StackName}-SecurityGroupSSH"
  SecurityGroupMinecraftServer:
    Description: "SG ID allowing Minecraft server access to approved IPs"
    Value: !Ref SecurityGroupMinecraftServer
    Export:
      Name: !Sub "SecurityGroupMinecraftServer"
